RESOLVED FIXED178114
Calling fileSystemDirectoryEntry.getDirectory() with empty path should not fail
https://bugs.webkit.org/show_bug.cgi?id=178114
Summary Calling fileSystemDirectoryEntry.getDirectory() with empty path should not fail
Chris Dumez
Reported 2017-10-09 19:54:12 PDT
Calling fileSystemDirectoryEntry.getDirectory() with empty/null/undefined path should not fail as per: - https://wicg.github.io/entries-api/#dom-filesystemdirectoryentry-getdirectory The empty string is a valid path as per: - https://wicg.github.io/entries-api/#valid-path This aligns out behavior with Chrome. Test: http://w3c-test.org/entries-api/filesystemdirectoryentry-getDirectory-manual.html
Attachments
Patch (7.83 KB, patch)
2017-10-09 19:56 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2017-10-09 19:56:17 PDT
Ryosuke Niwa
Comment 2 2017-10-09 20:27:28 PDT
Comment on attachment 323272 [details] Patch r=me preemptively
WebKit Commit Bot
Comment 3 2017-10-09 21:10:06 PDT
Comment on attachment 323272 [details] Patch Clearing flags on attachment: 323272 Committed r223118: <http://trac.webkit.org/changeset/223118>
WebKit Commit Bot
Comment 4 2017-10-09 21:10:08 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2017-10-09 21:10:38 PDT
Note You need to log in before you can comment on or make changes to this bug.