Calling fileSystemDirectoryEntry.getDirectory() with empty path should not fail https://bugs.webkit.org/show_bug.cgi?id=178114

Reviewed by Ryosuke Niwa.

Source/WebCore:

Calling fileSystemDirectoryEntry.getDirectory() with empty/null/undefined path should not fail as per:
- https://wicg.github.io/entries-api/#dom-filesystemdirectoryentry-getdirectory

The empty string is a valid path as per:
- https://wicg.github.io/entries-api/#valid-path

This aligns out behavior with Chrome.

No new tests, updated existing test.

* Modules/entriesapi/DOMFileSystem.cpp:
(WebCore::isValidVirtualPath):
(WebCore::resolveRelativeVirtualPath):

LayoutTests:

Extend layout test coverage.

* editing/pasteboard/entries-api/datatransfer-items-drop-getDirectory-expected.txt:
* editing/pasteboard/entries-api/datatransfer-items-drop-getDirectory.html:


Canonical link: https://commits.webkit.org/194363@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@223118 268f45cc-cd09-0410-ab3c-d52691b4dbfc